# RpnCalcQuick

./: CMakeLists.txt  Main.qml  MainForm.qml  PKGBUILD  README.md  appRpnCalcQuick.desktop  main.cpp  rpnengine.cpp  rpnengine.h  rpnhistorymodel.cpp  rpnhistorymodel.h  rpnstackmodel.cpp  rpnstackmodel.h
.github/workflows/: cmake-multi-platform.yml
qml/: CommandDispatcher.qml  DisplayFormatter.qml  InputHandler.qml  KeyboardController.qml  Main.qml  MainForm.qml
